# OnlineGetJob

DesignPattern/: CMakeLists.txt  main.cpp
DesignPattern/inc/: common.h
DesignPattern/src/: CMakeLists.txt  abs_factory.cpp  abs_factory.h  builder.cpp  builder.h  combine.cpp  combine.h  command.cpp  command.h  facada.h  media.cpp  media.h  observer.cpp  observer.h  single.cpp  single.h  status_m.cpp  status_m.h  template.cpp  template.h
DesignPattern/src/temp/: comand.cpp  comand.h
PingAn/: port_available.sh  protect_face.sh
PingAn/WashData/: ouput.txt  result.txt  result2119list.txt
PingAn/WashData/deal_pic/: map_file_name.py  unique_folder.py  清洗数据说明.txt
PingAn/WashData/temp/: list1219  similar1219
PingAn/WashData/test_quality/: OAHandlerImageQuality.py  crop_image.py  ret  ret.result  similar_cal.py  statis.py  test_cfg.py  test_imageQuality.py
TestPython/: base.py
TestPython/create_base64/: 1000x1000.txt  388x499.txt  468x424.txt  648x581.txt  734x772.txt  create_base64_code.py
TestPython/create_base64/3/: 112x112.txt  (+7 more)
Work/: 360.hpp  CMakeLists.txt  CharMaxe.hpp  JDthing.hpp  Session.hpp  add.hpp  address.hpp  apple.hpp  attack.hpp  baidu.hpp  box.hpp  button.hpp  candies.hpp  cicle.hpp  club.hpp  common.h  country.hpp  eate_chrocolata.hpp  encode.hpp  find_remainder.hpp  game_currenty.hpp  gather.hpp  hourse_ranc.hpp  index_char.hpp  le_xing.hpp  main.cpp  max_box.hpp  mei_tuan.hpp  meituan.hpp  numric_rever.hpp  play_card.hpp  quick_sort.hpp  qvnaer.hpp  run_home.hpp  souhu.hpp  tencent.hpp  test_skill.hpp  tower.hpp  twin.hpp  world_merge.hpp  (+3 more)
(+42 files in other folders)
