project("design_pattren")
cmake_minimum_required(VERSION 2.6)
add_definitions("-Wall -g -std=c++11")
include_directories(./inc ./src)
#link_directories(./)
aux_source_directory(./ MAIN)
add_subdirectory(./src)
add_executable(design_pattren ${MAIN})
target_link_libraries(design_pattren src_lib)